# led-controller

./: .gitignore
ESP32_ledstrip_client/: ESP32_ledstrip_client.ino  tuple.hpp
ledstrip_sender/: CMakeLists.txt  ledstrip_sender.files
ledstrip_sender/src/: main.cpp
ledstrip_sender_rainbow/: CMakeLists.txt  main.cpp
ledstrip_sender_screenedge/: ledstrip_sender_screenedge.pro  main.cpp
